--- a/capitulo1/1.1-startup-profile.md
+++ b/capitulo1/1.1-startup-profile.md
@@ -3,13 +3,23 @@
 ## 1.1 Startup Profile
 ### 1.1.1. Descripción de la Startup
 
-Somos ....
+TechVerse es una startup que busca solucionar problemas en la renta de autos por medio de aplicaciones tecnológicas. Fue fundada por los alumnos universitarios: Alonso Robles, Erick Urbizagastegui, Johan Moreno, Luis Isla y Nicolás Zagal en Lima, Perú.
 
-**Misión:** ...
+**Misión**
 
-**Visión:** Nuestra visión es ser...
+Nuestra misión es ayudar a las personas a reducir los contratiempos que puedan tener al momento de rentar un auto para que estas puedan llegar a sus destinos sin complicaciones. Pensamos lograr esto mediante el lanzamiento de aplicaciones web que se enfoquen en atacar dichos contratiempos.
+
+**Visión**
+
+Nuestra visión es tener una aplicación dedicada al nicho de la renta de autos que se encuentre en el top 10 de dicho nicho en Perú. Asimismo, planeamos expandir nuestros productos a nivel latinoamérica para que más personas puedan disfrutar de estos.
 
 
 ### 1.1.2. Perfiles de integrantes del equipo
 
-**Ruiz Torres, Erick Hernan** Actualmente me encuentro cursando el quinto ciclo de la carrera de Ingenieria de Software en la Universidad Peruana de Ciencias Aplicadas. Me considero una persona responsable , puntual y dedicada. Mis pasatiempos favorito es la ilustración digital, escuchar musica, jugar al futbol. Cuento con conocimientos en C++, Java, HTML, CSS, etc
+**Ruiz Torres, Erick Hernan**
+
+Actualmente me encuentro cursando el quinto ciclo de la carrera de Ingenieria de Software en la Universidad Peruana de Ciencias Aplicadas. Me considero una persona responsable , puntual y dedicada. Mis pasatiempos favorito es la ilustración digital, escuchar musica, jugar al futbol. Cuento con conocimientos en C++, Java, HTML, CSS, etc.
+
+**Urbizagastegui Alvarez, Erick Gabriel**
+
+![Imgur](https://i.imgur.com/NtO8rFx.png)
